<resources>
    <string name="app_name">Skin Detection</string>
    <string name="say_hello">Hello, Lola</string>
    <string name="view_results">View Results</string>
    <string name="text_scan">Your Scans</string>
    <string name="welcome_camera">Welcome to Skintec</string>
    <string name="text_camera">Take picture of your disease to know how to cure that</string>
    <string name="gallery">Gallery</string>
    <string name="user_profile">User Profile</string>
    <string name="username">Username</string>
    <string name="user_email">email@example.com</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="text_splash">Detect Your Skin Desease</string>
    <string name="text_about">Welcome To SkinTech</string>
    <string name="about_description">This is the About page of the app. Here you can see our Mission, Vision, and Core Value. And then you can find our contact below and ask us to know what is your problem</string>
    <string name="mission">Mission</string>
    <string name="vision">Vision</string>
    <string name="text_mission">Our mission is to educate and empower individuals about skin health, providing them with resources and support to manage and understand skin conditions effectively.</string>
    <string name="text_vision">Our vision is to be a leading resource in the field of skin health, driving awareness and understanding of skin conditions across diverse communities.</string>
    <string name="text_core">We believe in the power of knowledge. Educating our users about skin health allows them to make informed decisions.</string>
    <string name="contact_us">Contact Us</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="facebook">Facebook</string>
    <string name="verified">VERIFIED</string>
    <string name="save_changes">Save Changes</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="register_here">Register Here</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="main_text">WELCOME TO SKINTECH</string>
    <string name="article">Article</string>
    <string name="process">Process</string>
    <string name="CEO">About Founder</string>
    <string name="description_ceo">My Name is Willy Pieter Julius Situmorang. I was 21 Years Old, who lives in Medan, Indonesia. My Habby is Playing Football and Music. And This is my Project to my last task to graduate from my college. I build this with my friends. And my task was make this application, and the report. I like Technology when i was a child, i playing computer in Internet Cafes. Cuz of that i coming to be a student of informatics.</string>
    <string name="history">History</string>
    <string name="height">172 cm</string>
    <string name="heights">Height</string>
    <string name="old">21</string>
    <string name="age">Age</string>
    <string name="universitas_mikroskil">Universitas Mikroskil</string>
    <string name="college">College</string>
    <string name="teams">Teams</string>
    <string name="_3">3</string>
    <string name="text_support">Support and Connect with me</string>
    <string name="doctor">Dokter Kulit Di Indonesia</string>
</resources>